*VectorProperty types argument value COORDINATES was renamed to COORDS, breaking existing scripts #98860

Closed
opened 2022-06-13 21:23:59 +02:00 by Damien Picard · 8 comments
Member

System Information
Operating system: Linux-5.15.0-37-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.226.00

Blender Version
Broken: version: 3.3.0 Alpha, branch: master (modified), commit date: 2022-06-13 16:29, hash: 1243c2bdae
Broken: hash: 94444aaadf
Worked: hash: fb86f3ee18

Short description of error
The Sun Position add-on is broken as of 94444aaadf.
It looks like the value COORDINATES of the subtype parameter for the *VectorProperty types was renamed to COORDS in 94444aaadf. It doesn’t look like it was intended, since the change wasn’t documented as far as I could tell.

Exact steps for others to reproduce the error

  • Run the following script:
import bpy
bpy.types.Scene.co = bpy.props.FloatVectorProperty(subtype='COORDINATES')
  • The following error is raised:
ValueError: enum identifier: 'COORDINATES' not found in ('COLOR', 'TRANSLATION', 'DIRECTION', 'VELOCITY', 'ACCELERATION', 'MATRIX', 'EULER', 'QUATERNION', 'AXISANGLE', 'XYZ', 'XYZ_LENGTH', 'COLOR_GAMMA', 'COORDS', 'LAYER', 'LAYER_MEMBER', 'NONE')
Error: Python: Traceback (most recent call last):
  File "/Text", line 2, in <module>

ValueError: bpy_struct "Scene" registration error: 'co' FloatVectorProperty could not register (see previous error)
  • This works fine, though:
import bpy
bpy.types.Scene.co = bpy.props.FloatVectorProperty(subtype='COORDS')
**System Information** Operating system: Linux-5.15.0-37-generic-x86_64-with-glibc2.35 64 Bits Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.226.00 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master (modified), commit date: 2022-06-13 16:29, hash: `1243c2bdae` Broken: hash: `94444aaadf` Worked: hash: `fb86f3ee18` **Short description of error** The Sun Position add-on is broken as of 94444aaadf. It looks like the value `COORDINATES` of the subtype parameter for the *VectorProperty types was renamed to `COORDS` in 94444aaadf. It doesn’t look like it was intended, since the change wasn’t documented as far as I could tell. **Exact steps for others to reproduce the error** - Run the following script: ``` import bpy bpy.types.Scene.co = bpy.props.FloatVectorProperty(subtype='COORDINATES') ``` - The following error is raised: ``` ValueError: enum identifier: 'COORDINATES' not found in ('COLOR', 'TRANSLATION', 'DIRECTION', 'VELOCITY', 'ACCELERATION', 'MATRIX', 'EULER', 'QUATERNION', 'AXISANGLE', 'XYZ', 'XYZ_LENGTH', 'COLOR_GAMMA', 'COORDS', 'LAYER', 'LAYER_MEMBER', 'NONE') Error: Python: Traceback (most recent call last): File "/Text", line 2, in <module> ValueError: bpy_struct "Scene" registration error: 'co' FloatVectorProperty could not register (see previous error) ``` - This works fine, though: ``` import bpy bpy.types.Scene.co = bpy.props.FloatVectorProperty(subtype='COORDS') ```
Author
Member

Added subscriber: @pioverfour

Added subscriber: @pioverfour

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2022-06-14 20:34:33 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

It does indeed look like it was an accident on 94444aaadf and in fact can break addons like Sun Position.

@ideasman42, can you check?

It does indeed look like it was an accident on 94444aaadf and in fact can break addons like Sun Position. @ideasman42, can you check?

This issue was referenced by 9bed68de13

This issue was referenced by 9bed68de134c9cc5ff5295b95cc1bf0bae97b78a
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Might not be the most critical case, will still raise priority since it would be good to get a statement on the situation (scripts either need updating - then this should be documented in the changelog - or any other solution)

Might not be the most critical case, will still raise priority since it would be good to get a statement on the situation (scripts either need updating - then this should be documented in the changelog - or any other solution)

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98860
No description provided.