Fix T98860: VectorProperty type renamed to COORDS (breaking scripts)

Regression in [0] unintentionally renamed COORDINATES.
There was a naming discrepancy when two (nearly) identical arrays,
de-duplicating them caused the error.

[0]: 94444aaadf238ab2de4226d6b1b66284d479a931